docs/admission-controller/version-1.36/modules/en/pages/howtos/security-hardening/security-hardening.adoc
include::partial$variables.adoc[]

= Security hardening
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-05-04
:page-revdate: {revdate}
:sidebar_label: Security hardening
:sidebar_position: 50
:description: Secure {admc-name}'s with hardening tips and best practices to mitigate threats.
:keywords: ["{admc-name}", kubewarden, kubernetes, security]
:doc-persona: kubewarden-operator, kubewarden-integrator
:doc-type: howto
:doc-topic: operator-manual, security

{admc-name} strives to be secure with little configuration. In this
section and its subpages, you can find hardening tips (with their trade-offs)
to secure {admc-short-name} itself.

Please refer to the xref:/reference/threat-model.adoc[threat model] for more
information.

== `kubewarden-defaults` Helm chart

Operators can obtain a secure deployment by installing all the {admc-short-name} Helm
charts. It's recommended to install the `kubewarden-defaults` Helm chart and
enable its recommended policies with:

[source,console]
----
helm install --wait -n kubewarden kubewarden-defaults kubewarden/kubewarden-defaults \
  --set recommendedPolicies.enabled=True \
  --set recommendedPolicies.defaultPolicyMode=protect
----

This provides a default PolicyServer and default policies, in protect mode, to
ensure the {admc-short-name} stack is safe from other workloads.

== Verifying {admc-short-name} artifacts

Refer to the xref:/tutorials/verifying-kubewarden.adoc[Verifying
{admc-short-name}] tutorial.

== RBAC

{admc-short-name} describes RBAC configurations in different _Explanations_
sections. Users can fine-tune the needed permissions for the
xref:/explanations/audit-scanner/audit-scanner.adoc#_permissions_and_serviceaccounts[Audit
Scanner] feature, as well as xref:/explanations/context-aware-policies.adoc[per
Policy Server] Service Account for the context-aware feature.

To view all Roles:

[source,console]
----
kubectl get clusterroles,roles -A | grep kubewarden
----

== Per-policy permissions

For context-aware policies, operators specify fine-grained permissions per
policy under its `spec.contextAwareResources`, and those work in conjunction
with the Service Account configured for the Policy Server where the policy
runs.

== Workload coverage

By default, {admc-short-name} excludes specific Namespaces from
{admc-short-name} coverage. This is done to simplify first-time use and
interoperability with other workloads.

Security-conscious operators can tune these Namespaces list via the
`.global.skipNamespaces` value for both the `kubewarden-controller` and
`kubewarden-defaults` Helm charts.

== Pod Security Admission

From 1.23, {admc-short-name}'s stack is able to run in a Namespace where the
https://kubernetes.io/docs/concepts/security/pod-security-standards/#restricted[`restricted``
Pod Security Standards] are in place, with current Pod hardening best
practices.

To do that, you need to add the `pod-security.kubernetes.io/enforce:
restricted` label to the {admc-short-name} deployment Namespace.

```console
kubectl label namespace kubewarden pod-security.kubernetes.io/enforce=restricted --overwrite
```

See the
https://kubernetes.io/docs/concepts/security/pod-security-admission/[official
documentation] of Kubernetes' Pod Security Admission for more details.

=== SecurityContexts

The `kubewarden-controller` Helm chart configures the SecurityContexts and
exposes them in its `values.yaml`.

The `kubewarden-defaults` Helm chart allows for configuring the default Policy
Server `.spec.securityContexts` under `.Values.policyServer.securityContexts`.

For Policy Servers managed by operators, you can configure them via their
xref:/reference/CRDs.adoc#_policyserversecurity[`spec.securityContexts`].

=== Namespaced policy host capabilities

Namespaced policies (`AdmissionPolicy` and `AdmissionPolicyGroup`) cannot
access Kubernetes resources via `contextAwareResources`, but they can exercise
other host capabilities: OCI registry queries, Kubernetes `can_i` checks, DNS
lookups, and certificate verification. These capabilities could be exploited by
a low-privileged user for information disclosure or reconnaissance (see our
xref:/reference/threat-model.adoc[threat model]).

Each `PolicyServer` exposes a `spec.namespacedPoliciesCapabilities` field that
lists which host capability API call paths are available to its namespaced
policies. By default, all PolicyServers allow all host capability calls for
namespaced policies. This includes the PolicyServer `default` (installed with
the `kubewarden-defaults` Helm chart), and custom PolicyServers.

Cluster operators need to configure each PolicyServer's
`spec.namespacedPoliciesCapabilities` by setting it to `[]` to deny all, or
provide an explicit allowlist.

For a full walkthrough, including an example on secure self-service Namespaces
and policies useful for teams, see
xref:/howtos/policy-servers/06-namespaced-policies-capabilities.adoc[Controlling host capabilities for namespaced policies].